[package]
name = "rust-commandline-example"
version = "0.1.0"
authors = ["Mario Zupan <mario@zupzup.org>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clearscreen = "3.0.0"
crossterm = { version = "0.19", features = [ "serde" ] }
homedir = "0.2.1"
rand = { version = "0.7.3", default-features = false, features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tui = { version = "0.14", default-features = false, features = ['crossterm', 'serde'] }
